--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "konnex-engine/konnex-engine",
+    "description": "The Konnex Engine Framework.",
+    "keywords": ["framework", "konnex", "konnex-engine", "api"],
     "license": "MIT",
     "type": "project",
     "require": {
